# serializer version: 1
# name: test_candle_lighting_on_friday[New York]
  list([
    dict({
      'description': 'Candle lighting time: 16:31',
      'end': '2024-01-12T21:31:00+00:00',
      'start': '2024-01-12T21:31:00+00:00',
      'summary': 'Candle Lighting',
    }),
  ])
# ---
# name: test_daily_events[Jerusalem]
  list([
    dict({
      'description': 'Hebrew date: ה\' שבט ה\' תשפ"ד',
      'end': '2024-01-16',
      'start': '2024-01-15',
      'summary': 'ה\' שבט ה\' תשפ"ד',
    }),
    dict({
      'description': 'Halachic sunrise: 06:40',
      'end': '2024-01-15T04:40:00+00:00',
      'start': '2024-01-15T04:40:00+00:00',
      'summary': 'Netz Hachama',
    }),
    dict({
      'description': 'Sunset: 16:57',
      'end': '2024-01-15T14:57:00+00:00',
      'start': '2024-01-15T14:57:00+00:00',
      'summary': 'Shkia',
    }),
    dict({
      'description': 'Nightfall: 17:26',
      'end': '2024-01-15T15:26:00+00:00',
      'start': '2024-01-15T15:26:00+00:00',
      'summary': "T'set Hakochavim",
    }),
  ])
# ---
# name: test_daily_events[New York]
  list([
    dict({
      'description': 'Hebrew date: ה\' שבט ה\' תשפ"ד',
      'end': '2024-01-16',
      'start': '2024-01-15',
      'summary': 'ה\' שבט ה\' תשפ"ד',
    }),
    dict({
      'description': 'Halachic sunrise: 07:18',
      'end': '2024-01-15T12:18:00+00:00',
      'start': '2024-01-15T12:18:00+00:00',
      'summary': 'Netz Hachama',
    }),
    dict({
      'description': 'Sunset: 16:53',
      'end': '2024-01-15T21:53:00+00:00',
      'start': '2024-01-15T21:53:00+00:00',
      'summary': 'Shkia',
    }),
    dict({
      'description': 'Nightfall: 17:26',
      'end': '2024-01-15T22:26:00+00:00',
      'start': '2024-01-15T22:26:00+00:00',
      'summary': "T'set Hakochavim",
    }),
  ])
# ---
# name: test_entities[Jerusalem][calendar.jewish_calendar_daily_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.jewish_calendar_daily_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Daily events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Daily events',
    'platform': 'jewish_calendar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'daily_events',
    'unique_id': '01JJJJJJJJJJJJJJJJJJJJJJJJ-daily_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[Jerusalem][calendar.jewish_calendar_daily_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': True,
      'description': "Hebrew date: 5 Sh'vat 5784",
      'end_time': '2024-01-16 00:00:00',
      'friendly_name': 'Jewish Calendar Daily events',
      'location': '',
      'message': "5 Sh'vat 5784",
      'start_time': '2024-01-15 00:00:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.jewish_calendar_daily_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[Jerusalem][calendar.jewish_calendar_learning_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.jewish_calendar_learning_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Learning schedule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Learning schedule',
    'platform': 'jewish_calendar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'learning_schedule',
    'unique_id': '01JJJJJJJJJJJJJJJJJJJJJJJJ-learning_schedule',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[Jerusalem][calendar.jewish_calendar_learning_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': True,
      'description': 'Daf Yomi: Bava Kamma 74',
      'end_time': '2024-01-16 00:00:00',
      'friendly_name': 'Jewish Calendar Learning schedule',
      'location': '',
      'message': 'Bava Kamma 74',
      'start_time': '2024-01-15 00:00:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.jewish_calendar_learning_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[Jerusalem][calendar.jewish_calendar_yearly_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.jewish_calendar_yearly_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Yearly events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yearly events',
    'platform': 'jewish_calendar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'yearly_events',
    'unique_id': '01JJJJJJJJJJJJJJJJJJJJJJJJ-yearly_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[Jerusalem][calendar.jewish_calendar_yearly_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': False,
      'description': 'Candle lighting time: 16:21',
      'end_time': '2024-01-19 16:21:00',
      'friendly_name': 'Jewish Calendar Yearly events',
      'location': '',
      'message': 'Candle Lighting',
      'start_time': '2024-01-19 16:21:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.jewish_calendar_yearly_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[New York][calendar.jewish_calendar_daily_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.jewish_calendar_daily_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Daily events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Daily events',
    'platform': 'jewish_calendar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'daily_events',
    'unique_id': '01JJJJJJJJJJJJJJJJJJJJJJJJ-daily_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[New York][calendar.jewish_calendar_daily_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': True,
      'description': "Hebrew date: 5 Sh'vat 5784",
      'end_time': '2024-01-16 00:00:00',
      'friendly_name': 'Jewish Calendar Daily events',
      'location': '',
      'message': "5 Sh'vat 5784",
      'start_time': '2024-01-15 00:00:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.jewish_calendar_daily_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[New York][calendar.jewish_calendar_learning_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.jewish_calendar_learning_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Learning schedule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Learning schedule',
    'platform': 'jewish_calendar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'learning_schedule',
    'unique_id': '01JJJJJJJJJJJJJJJJJJJJJJJJ-learning_schedule',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[New York][calendar.jewish_calendar_learning_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': True,
      'description': 'Daf Yomi: Bava Kamma 74',
      'end_time': '2024-01-16 00:00:00',
      'friendly_name': 'Jewish Calendar Learning schedule',
      'location': '',
      'message': 'Bava Kamma 74',
      'start_time': '2024-01-15 00:00:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.jewish_calendar_learning_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[New York][calendar.jewish_calendar_yearly_events-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'calendar',
    'entity_category': None,
    'entity_id': 'calendar.jewish_calendar_yearly_events',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Yearly events',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yearly events',
    'platform': 'jewish_calendar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'yearly_events',
    'unique_id': '01JJJJJJJJJJJJJJJJJJJJJJJJ-yearly_events',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[New York][calendar.jewish_calendar_yearly_events-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_day': False,
      'description': 'Candle lighting time: 16:39',
      'end_time': '2024-01-19 16:39:00',
      'friendly_name': 'Jewish Calendar Yearly events',
      'location': '',
      'message': 'Candle Lighting',
      'start_time': '2024-01-19 16:39:00',
    }),
    'context': <ANY>,
    'entity_id': 'calendar.jewish_calendar_yearly_events',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_havdalah_on_saturday[calendar_events0-New York]
  list([
    dict({
      'description': 'Havdalah time: 17:35',
      'end': '2024-01-13T22:35:00+00:00',
      'start': '2024-01-13T22:35:00+00:00',
      'summary': 'Havdalah',
    }),
  ])
# ---
# name: test_holiday[Jerusalem]
  list([
    dict({
      'description': '''
        Jewish Holiday: שושן פורים
        Holiday Type: HolidayTypes.MELACHA_PERMITTED_HOLIDAY
      ''',
      'end': '2024-03-26',
      'start': '2024-03-25',
      'summary': 'שושן פורים',
    }),
  ])
# ---
# name: test_learning_schedule_events[Jerusalem]
  list([
    dict({
      'description': 'Daf Yomi: בבא בתרא כ',
      'end': '2024-07-16',
      'start': '2024-07-15',
      'summary': 'בבא בתרא כ',
    }),
  ])
# ---
# name: test_omer_count[calendar_events0-New York]
  list([
    dict({
      'description': 'Sefirat HaOmer: היום יום אחד לעומר',
      'end': '2024-04-25',
      'start': '2024-04-24',
      'summary': "א' לעומר",
    }),
  ])
# ---
# name: test_weekly_portion_on_shabbat[Jerusalem]
  list([
    dict({
      'description': 'Parshat Hashavua: וארא',
      'end': '2024-01-14',
      'start': '2024-01-13',
      'summary': 'וארא',
    }),
    dict({
      'description': 'Havdalah time: 17:35',
      'end': '2024-01-13T15:35:00+00:00',
      'start': '2024-01-13T15:35:00+00:00',
      'summary': 'Havdalah',
    }),
  ])
# ---
# name: test_weekly_portion_on_shabbat[New York]
  list([
    dict({
      'description': 'Parshat Hashavua: וארא',
      'end': '2024-01-14',
      'start': '2024-01-13',
      'summary': 'וארא',
    }),
    dict({
      'description': 'Havdalah time: 17:35',
      'end': '2024-01-13T22:35:00+00:00',
      'start': '2024-01-13T22:35:00+00:00',
      'summary': 'Havdalah',
    }),
  ])
# ---
# name: test_weekly_portion_on_simchat_torah_diaspora[New York]
  list([
    dict({
      'description': '''
        Jewish Holiday: שמחת תורה
        Holiday Type: HolidayTypes.YOM_TOV
      ''',
      'end': '2024-10-26',
      'start': '2024-10-25',
      'summary': 'שמחת תורה',
    }),
    dict({
      'description': 'Parshat Hashavua: וזאת הברכה',
      'end': '2024-10-26',
      'start': '2024-10-25',
      'summary': 'וזאת הברכה',
    }),
    dict({
      'description': 'Candle lighting time: 17:42',
      'end': '2024-10-25T21:42:00+00:00',
      'start': '2024-10-25T21:42:00+00:00',
      'summary': 'Candle Lighting',
    }),
  ])
# ---
# name: test_weekly_portion_on_simchat_torah_israel[Jerusalem]
  list([
    dict({
      'description': '''
        Jewish Holiday: שמיני עצרת
        Holiday Type: HolidayTypes.YOM_TOV
      ''',
      'end': '2024-10-25',
      'start': '2024-10-24',
      'summary': 'שמיני עצרת',
    }),
    dict({
      'description': '''
        Jewish Holiday: שמחת תורה
        Holiday Type: HolidayTypes.YOM_TOV
      ''',
      'end': '2024-10-25',
      'start': '2024-10-24',
      'summary': 'שמחת תורה',
    }),
    dict({
      'description': 'Parshat Hashavua: וזאת הברכה',
      'end': '2024-10-25',
      'start': '2024-10-24',
      'summary': 'וזאת הברכה',
    }),
    dict({
      'description': 'Havdalah time: 18:34',
      'end': '2024-10-24T15:34:00+00:00',
      'start': '2024-10-24T15:34:00+00:00',
      'summary': 'Havdalah',
    }),
  ])
# ---
